[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Player/Minigames/PwrBX/PwrBx.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player/Minigames/PwrBX/LG.png" type="Texture" id=2]
[ext_resource path="res://Objects/Player/Minigames/Cursor.gd" type="Script" id=3]
[ext_resource path="res://Objects/Player/Minigames/PwrBX/Sodder.png" type="Texture" id=4]
[ext_resource path="res://Objects/Player/Minigames/PwrBX/Break.gd" type="Script" id=5]
[ext_resource path="res://Objects/Player/Minigames/PwrBX/BreakCollider.gd" type="Script" id=6]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.746032, 0.994709, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 0.835294, 0.802614, 0.688889, 0.666667, 0.505882, 0.407843, 0.0666667, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 3.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1, 1 )

[node name="Minigame1" type="Node2D" groups=["Minigame"]]
script = ExtResource( 1 )
Self = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -21, -41 )
texture = ExtResource( 2 )
centered = false

[node name="Cursor" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Cursor"]
position = Vector2( 1, -10 )
emitting = false
amount = 30
lifetime = 1.5
speed_scale = 1.5
randomness = 0.9
lifetime_randomness = 0.5
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 0.141176, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="Sprite" type="Sprite" parent="Cursor"]
position = Vector2( 14, 20 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Cursor"]
position = Vector2( -1, -1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
position = Vector2( 2.5, -8.5 )
shape = SubResource( 1 )

[node name="Break1" type="Node2D" parent="."]
position = Vector2( -12, 7 )
script = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Break1"]
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 0.756863, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="Area2D" type="Area2D" parent="Break1"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Break1/Area2D"]
shape = SubResource( 3 )

[node name="Break2" type="Node2D" parent="."]
position = Vector2( -8, -41 )
script = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Break2"]
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 0.756863, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="Area2D" type="Area2D" parent="Break2"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Break2/Area2D"]
shape = SubResource( 3 )

[node name="Break3" type="Node2D" parent="."]
position = Vector2( -2, -41 )
script = ExtResource( 5 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Break3"]
amount = 20
lifetime = 1.5
speed_scale = 1.5
explosiveness = 0.66
randomness = 0.9
lifetime_randomness = 0.5
direction = Vector2( 0, -20 )
spread = 90.0
initial_velocity = 30.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
color = Color( 1, 0.756863, 0, 1 )
color_ramp = SubResource( 2 )
hue_variation = 0.05
hue_variation_random = 0.49

[node name="Area2D" type="Area2D" parent="Break3"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Break3/Area2D"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Cursor/Area2D" to="Cursor" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Cursor/Area2D" to="Cursor" method="_on_Area2D_area_exited"]
